# coloring

./: CMakeLists.txt  README  boi.h  bucket_queue.h  clique.h  conflict_graph.cpp  conflict_graph.h  geometric.h  graph_generator.h  heuristics.h  main_benchmark.cpp  planarity.h  reducer.h  run.sh  sat_encode.h  sat_encode2.h  sat_search.h  solution.h
cadical/: CMakeLists.txt  version.cpp  version.hpp
glucose30/: CMakeLists.txt
glucose30/core/: BoundedQueue.h  Solver.cc  Solver.h  SolverTypes.h
glucose30/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
instances/: reecn11799.instance.txt  reecn12588.instance.txt  reecn15355.instance.txt  reecn16388.instance.txt  reecn17244.instance.txt  reecn18615.instance.txt  reecn21194.instance.txt  reecn21946.instance.txt  reecn23484.instance.txt  reecn23945.instance.txt  reecn25913.instance.txt  reecn27494.instance.txt  reecn29395.instance.txt  reecn31126.instance.txt  reecn32569.instance.txt  reecn3382.instance.txt  reecn34307.instance.txt  reecn36204.instance.txt  reecn37593.instance.txt  reecn39476.instance.txt  reecn3988.instance.txt  reecn41237.instance.txt  reecn42891.instance.txt  reecn44299.instance.txt  reecn45823.instance.txt  reecn47287.instance.txt  reecn48602.instance.txt  reecn50133.instance.txt  reecn51526.instance.txt  reecn53304.instance.txt  reecn54867.instance.txt  reecn56737.instance.txt  reecn58325.instance.txt  reecn59950.instance.txt  reecn61436.instance.txt  reecn63079.instance.txt  reecn64798.instance.txt  reecn66642.instance.txt  reecn68262.instance.txt  reecn6910.instance.txt  (+185 more)
(+5 files in other folders)
